--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Equinox</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
+	<meta name="description" content="equinox-images" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="freehtml5.co" />
 
@@ -397,37 +397,37 @@
 		<div class="container-fluid proj-bottom">
 			<div class="row">
 				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+					<a href="#"><img src="images/project-1.jpg" alt="equinox-images" class="img-responsive">
 						<h3>Web Master</h3>
 						<span>View Course</span>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-2.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+					<a href="#"><img src="images/project-2.jpg" alt="equinox-images" class="img-responsive">
 						<h3>Virtual Assistant</h3>
 						<span>View Course</span>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+					<a href="#"><img src="images/project-3.jpg" alt="equinox-images" class="img-responsive">
 						<h3>Read Bible</h3>
 						<span>View Course</span>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-9.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+					<a href="#"><img src="images/project-9.jpg" alt="equinox-images" class="img-responsive">
 						<h3>Programming</h3>
 						<span>View Course</span>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-5.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+					<a href="#"><img src="images/project-5.jpg" alt="equinox-images" class="img-responsive">
 						<h3>Technician</h3>
 						<span>View Course</span>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-6.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+					<a href="#"><img src="images/project-6.jpg" alt="equinox-images" class="img-responsive">
 						<h3>Photography</h3>
 						<span>View Course</span>
 					</a>
@@ -576,6 +576,37 @@
 
 		</div>
 	</footer>
+	<!-- Messenger Chat plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "101959622482026");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v14.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
 	</div>
 
 	<div class="gototop js-top">
