--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Equinox</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
+	<meta name="description" content="equinox-images" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="freehtml5.co" />
 
@@ -130,200 +130,61 @@
 			<div class="row">
 				<div class="pricing">
 					<div class="col-md-4 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Starter</h2>
-							<div class="price"><sup class="currency">$</sup>9<small>/month</small></div>
-							<ul class="classes">
-								<li>15 English 101</li>
-								<li class="color">10 Web Development</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Virtual Assistant</li>
-								<li>10 System Analyst</li>
-								<li class="color">5 WordPress</li>
-								<li>10 Programming</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-4 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Basic</h2>
-							<div class="price"><sup class="currency">$</sup>27<small>/month</small></div>
-							<ul class="classes">
-								<li>15 English 101</li>
-								<li class="color">10 Web Development</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Virtual Assistant</li>
-								<li>10 System Analyst</li>
-								<li class="color">5 WordPress</li>
-								<li>10 Programming</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-4 animate-box">
 						<div class="price-box popular">
-							<h2 class="pricing-plan pricing-plan-offer">Pro <span>Best Offer</span></h2>
-							<div class="price"><sup class="currency">$</sup>74<small>/month</small></div>
+							<h2 class="pricing-plan pricing-plan-offer">Comprehensive course <span>Best Offer</span></h2>
+							<div class="price"><sup class="currency">₹</sup>74<small>ONE TIME</small></div>
 							<ul class="classes">
-								<li>15 English 101</li>
-								<li class="color">10 Web Development</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Virtual Assistant</li>
-								<li>10 System Analyst</li>
-								<li class="color">5 WordPress</li>
-								<li>10 Programming</li>
+								<li>Everything included in Day Trading</li>
+								<li class="color">Everything included in Swing Trading</li>
+								<li>Designing personal finance or investing framework</li>
+								<li class="color">Introduction to long term/value investing</li>
 							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
+							<a href="#" class="btn btn-select-plan btn-sm">Buy Now</a>
 						</div>
 					</div>
+					
 
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="equinox-explore" class="equinox-bg-section">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center equinox-heading">
-					<h2>Take A Course</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-				</div>
-			</div>
-		</div>		
-		<div class="equinox-explore equinox-explore1">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-push-5 animate-box">
-						<img class="img-responsive" src="images/work_1.png" alt="work">
-					</div>
-					<div class="col-md-4 col-md-pull-8 animate-box">
-						<div class="mt">
-							<h3>We Want You To Learn English</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="list-nav">
-								<li><i class="icon-check2"></i>Far far away, behind the word</li>
-								<li><i class="icon-check2"></i>There live the blind texts</li>
-								<li><i class="icon-check2"></i>Separated they live in bookmarksgrove</li>
+					<div class="col-md-4 animate-box">
+						<div class="price-box">
+							<h2 class="pricing-plan">Swing Trading</h2>
+							<div class="price"><sup class="currency">₹</sup>27<small>ONE TIME</small></div>
+							<ul class="classes">
+								<li>Understanding Long trend concept</li>
+								<li class="color">Volume Breakout Analysis</li>
+								<li>Decoding Independent Candle Concept</li>
+								<li class="color">Study of Support & Resistance in higher timeframes</li>
+								<li>Identification of target and stop-loss</li>
+								<li class="color">Risk Management</li>
 							</ul>
-							<p><a class="btn btn-primary btn-lg popup-youtube btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Watch Video</a></p>
+							<a href="#" class="btn btn-select-plan btn-sm">Buy Now</a>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
 
-		<div class="equinox-explore">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-pull-1 animate-box">
-						<img class="img-responsive" src="images/work_1.png" alt="work">
-					</div>
 					<div class="col-md-4 animate-box">
-						<div class="mt">
-							<div>
-								<h4><i class="icon-user"></i>Real Project For Real Solutions</h4>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia. </p>
-							</div>
-							<div>
-								<h4><i class="icon-video2"></i>Real Project For Real Solutions</h4>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-							</div>
-							<div>
-								<h4><i class="icon-shield"></i>Real Project For Real Solutions</h4>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia. </p>
-							</div>
+						<div class="price-box">
+							<h2 class="pricing-plan">Day Trading</h2>
+							<div class="price"><sup class="currency">₹</sup>9<small>ONE TIME</small></div>
+							<ul class="classes">
+								<li>Market activity Report Analysis</li>
+								<li class="color">Fundamental & Technical Analysis of Nifty</li>
+								<li>Stock Selection Using 3G method</li>
+								<li class="color">Macro-Micro Analysis</li>
+								<li>Achieving High Probability Trade</li>
+								<li class="color">Study of Support & Resistance in different timeframes</li>
+								<li >Trend identification secrets</li>
+								<li class="color">Identification of target and stop-loss</li>
+								<li >Risk Management</li>
+							</ul>
+							<a href="#" class="btn btn-select-plan btn-sm">Buy Now</a>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div id="equinox-project">
-		<div class="container-fluid proj-bottom">
-			<div class="row">
-				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-						<h3>Web Master</h3>
-						<span>View Course</span>
-					</a>
-				</div>
-				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-2.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-						<h3>Virtual Assistant</h3>
-						<span>View Course</span>
-					</a>
-				</div>
-				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-						<h3>Read Bible</h3>
-						<span>View Course</span>
-					</a>
-				</div>
-				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-9.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-						<h3>Programming</h3>
-						<span>View Course</span>
-					</a>
-				</div>
-				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-5.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-						<h3>Technician</h3>
-						<span>View Course</span>
-					</a>
-				</div>
-				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/project-6.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-						<h3>Photography</h3>
-						<span>View Course</span>
-					</a>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="features">
-					<div class="col-md-4 animate-box">
-						<h4>We have coolest features of this course</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.  </p>
-					</div>
-					<div class="col-md-4 animate-box">
-						<h4>Great teachers that we have</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.  </p>
-					</div>
-					<div class="col-md-4 animate-box">
-						<h4>Steps by steps turorial session</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.  </p>
-					</div>
-				</div>
-				<div class="col-md-12 text-center animate-box">
-					<p><a class="btn btn-primary btn-lg btn-learn" href="#">Create A Free Course</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
 	
-	<div id="equinox-started" style="background-image:url(images/img_bg_2.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center equinox-heading">
-					<h2>Lets Get Started</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<p><a href="#" class="btn btn-default btn-lg">Create A Free Course</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
-
 	<footer id="equinox-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
